# Messenger

client/: CMakeLists.txt  main.cpp
client/src/client/: Client.cpp  Client.h  ClientState.cpp
client/src/state/: NewMessageState.cpp  NewMessageState.h  State.cpp  State.h  StateDownloadFile.cpp  StateDownloadFile.h  StateMain.cpp  StateMain.h  StateNewMessage.cpp  StateNewMessage.h  StateUploadFile.cpp  StateUploadFile.h
server/: CMakeLists.txt  main.cpp  test.cpp
server/src/client/: Client.cpp  Client.h
server/src/mediator/: Mediator.cpp  Mediator.h
server/src/server/: Server.cpp  Server.h
